--- a/styles/colors.less
+++ b/styles/colors.less
@@ -6,10 +6,15 @@
 @dark-gray: #282a2e;
 @very-dark-gray: #1d1f21;
 
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
+@cyan: #77e8df;
+
+@blue: #1ab7e8;
+@dark-blue: #0064ff;
+
+@purple: #d752ff;
+@green: #abd675;
+@red: #ef5b5b;
+@orange: #f7904a;
 @light-orange: #f0c674;
+@yellow: #fffc6b;
+@white: #ffffff;
